profile and diaries toolbars, profile trips

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -72,5 +72,6 @@
 @import "city/binakuru/devise"
 @import "city/binakuru/toolbar"
 @import "city/binakuru/fonts"
+@import "city/binakuru/profile"
 
 
