--- a/app/views/diaries/show.html.erb
+++ b/app/views/diaries/show.html.erb
@@ -1,5 +1,5 @@
+<%= render :partial => 'toolbar/diaries' %>
 <h2><%= @diary.title %> diary</h2>
-
 <div class="guide_all tabbable">
   <ul class="nav nav-tabs">
     <li class="active">
