--- a/app/assets/stylesheets/city/binakuru/layout.css.sass
+++ b/app/assets/stylesheets/city/binakuru/layout.css.sass
@@ -1,10 +1,17 @@
 .banner
-	@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-	height: 60px
-	display: inline-block
+  @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+  height: 60px
+  display: inline-block
 
 body
-	.wrapper
-		width: 969px
-		background-image: url('guia-01.png')
-		background-repeat: repeat-y
+  .wrapper
+    width: 969px
+    background-image: url('guia-01.png')
+    background-repeat: repeat-y
+
+.navbar
+  .container
+    width: 969px
+    display: block
+    margin-left: auto
+    margin-right: auto
