--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container nav-header">
       <button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button">
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to(image_tag('barco_blanco.png', :alt => t('site.name')), root_path, class: 'logo') %>
-      <a href="/home "class="brand">HELLOWORLD</a>
+      <a href="/home "class="brand">binakuru</a>
       
       <div class="nav-collapse collapse pull-right">
         <ul class="nav">
