--- a/app/views/layouts/_header_signed_out.erb
+++ b/app/views/layouts/_header_signed_out.erb
@@ -1,12 +1,5 @@
-<header class="headerFront">
-    <%= link_to(image_tag('barco_logo_blanco.png', :alt => t('site.name')), root_path) %>
-    <div class="brand inline"></div>
-    <% unless params[:controller].eql? 'devise/sessions' and params[:action].eql? 'new' %> 
-    <% end %>
 
-</header>
-
-<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container nav-header">
       <button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button">
@@ -15,15 +8,29 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to(image_tag('barco_blanco.png', :alt => t('site.name')), root_path, class: 'logo') %>
-      <a href="/home "class="brand">HELLOWORLD</a>
+      <a href="/home "class="brand">binakuru</a>
       
-    
-      <div class="search-nav pull-right">
-        <%= form_tag search_path, method: 'get', class: "navbar-search pull-right" do %>
-          <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name') %>
+
+      <div class="search-nav ">
+        <%= form_tag search_path, method: 'get', class: "navbar-search " do %>
+        <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name') %>
         <% end %>
+      </div>
+
+          <div class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">go to<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                <li>
+                  sdioufiop
+                </li>
+   
+              </ul>
+          </div>
+
       </div>
     </div>
   </div>
-</div>
+
+
+
 
