changes profile and fonts

--- a/app/assets/stylesheets/city/binakuru/layout.css.sass
+++ b/app/assets/stylesheets/city/binakuru/layout.css.sass
@@ -8,3 +8,12 @@ body
 		width: 969px
 		background-image: url('guia-01.png')
 		background-repeat: repeat-y
+	.divider
+		background-color: lightgrey
+		height: 1px
+	.section 
+		font-family: $section
+		text-align: center
+		width: 100%
+		color: grey
+		margin-bottom: 40px
