--- a/app/assets/stylesheets/city/bootstrap-rewrite/_variables.scss
+++ b/app/assets/stylesheets/city/bootstrap-rewrite/_variables.scss
@@ -32,8 +32,8 @@ $purple:                #7a43b6 !default;
 
 // Scaffolding
 // -------------------------
-$bodyBackground:        $white !default;
-$textColor:             $grayDark !default;
+$bodyBackground:        #f9f9f9;
+$textColor:             $gray;
 
 
 // Links
