--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -25,13 +25,11 @@
 
 <div id="content_profile" class="grid-3_center">
   <div class="trip_content">
+    <p class="section">diaries / guides</p>
     <ul class="trips">
       <li class="plannings">
         <div class="planning_item">
           <img src="/assets/toledo_basica.jpg" alt="Toledo_basica">
-          <div class="caption">
-            <h4>Planning</h4>
-          </div>
           <div class="caption_img">
             <img src="/assets/guia2.png" alt="">
           </div>
@@ -42,24 +40,19 @@
         <a href="/diaries/1">
           <div class="diary_item">
             <img src="/assets/san_juan.jpg" alt="Toledo_basica">
-            <div class="caption">
-              <h4>Diary</h4>
-            </div>
             <div class="caption_img">
               <img src="/assets/diario24.png" alt="">
             </div>
           </div>
         </a>
       </li> 
-      <div class="city"><h4>TOLEDO</h4></div>
+      <div class="city"><p>Toledo 2013</p></div>
+      <div class="divider">
     </ul>
     <ul class="trips">
       <li class="plannings">
         <div class="planning_item">
           <img src="/assets/toledo_basica.jpg" alt="Toledo_basica">
-          <div class="caption">
-            <h4>Planning</h4>
-          </div>
           <div class="caption_img">
             <img src="/assets/guia2.png" alt="">
           </div>
@@ -70,16 +63,37 @@
         <a href="/diaries/1">
           <div class="diary_item">
             <img src="/assets/san_juan.jpg" alt="Toledo_basica">
-            <div class="caption">
-              <h4>Diary</h4>
-            </div>
             <div class="caption_img">
               <img src="/assets/diario24.png" alt="">
             </div>
           </div>
         </a>
       </li> 
-      <div class="city"><h4>TOLEDO</h4></div>
+      <div class="city"><p>Toledo 2013</p></div>
+      <div class="divider"></div>
+    </ul>
+    <ul class="trips">
+      <li class="plannings">
+        <div class="planning_item">
+          <img src="/assets/toledo_basica.jpg" alt="Toledo_basica">
+          <div class="caption_img">
+            <img src="/assets/guia2.png" alt="">
+          </div>
+        </div>
+      </li>
+
+      <li class="diaries" >
+        <a href="/diaries/1">
+          <div class="diary_item">
+            <img src="/assets/san_juan.jpg" alt="Toledo_basica">
+            <div class="caption_img">
+              <img src="/assets/diario24.png" alt="">
+            </div>
+          </div>
+        </a>
+      </li> 
+      <div class="city"><p>Toledo 2013</p></div>
+      <div class="divider">
     </ul>
   </div>
 </div>
@@ -137,4 +151,7 @@
     <li></li>
     <li></li>
   </ul>
+</div>
+<div id="wall">
+  <p class="section">wall</p>
 </div>
