--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -154,4 +154,35 @@
 </div>
 <div id="wall">
   <p class="section">wall</p>
+  <div class="add_wall">
+    <div class="add_icon"><p>+</p></div>
+  </div>
+  <div class="wall_content">
+    <ul>
+      <li class="publication_space">
+        <p>Show something...</p>
+      </li>
+      <li>
+        <div class="wall_gallery">
+          <ul>
+            <li class="wall_image"></li>
+            <li class="wall_image"></li>
+          </ul>
+        </div>
+        <div class="options_publication">
+          <ul>
+            <li><a href="">comment</a></li>
+            <li><a href="">like</a></li>
+            <li><a href="">share</a></li>
+          </ul>
+        </div>
+        <div class="wall_date">
+          <div class="dates">
+            <div class="publication_date"> <p>23Feb</p></div>
+          </div>
+          <div class="divider"></div>
+        </div>
+      </li>
+    </ul>
+  </div>
 </div>
