--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,5 +1,7 @@
 @import "city/bootstrap-rewrite/variables"
 @import "city/binakuru/variables"
+@import "city/binakuru/mixins"
+
 //booststrap
 @import "bootstrap"
 @import "bootstrap-responsive"
@@ -72,10 +74,11 @@
 @import "city/binakuru/devise"
 @import "city/binakuru/toolbar"
 @import "city/binakuru/fonts"
-
 @import "city/binakuru/headers"
 
 @import "city/binakuru/profile"
+
+
 
 
 
