--- a/app/assets/stylesheets/city/binakuru/layout.css.sass
+++ b/app/assets/stylesheets/city/binakuru/layout.css.sass
@@ -12,10 +12,9 @@ body
     background-color: lightgrey
     height: 1px
   .section 
-    font-family: $section
+    @include section
     text-align: center
     width: 100%
-    color: grey
     margin-bottom: 40px
 .navbar
   .container
