--- a/app/assets/stylesheets/city/binakuru/profile.css.sass
+++ b/app/assets/stylesheets/city/binakuru/profile.css.sass
@@ -76,9 +76,15 @@
       margin-top: 20px
       .wall_image
         display: inline-block
-        width: 227px
-        height: 169px
         background-color: $color2
+        border-radius: 50%
+        width: 150px
+        height: 150px
+        border-radius: 50px 50px 0px 50px; 
+-moz-border-radius: 50px 50px 0px 50px; 
+-webkit-border-radius: 50px 50px 0px 50px; 
+border: 0px solid #800000;
+
       .wall_image:first-child
         margin-right: 20px
     .options_publication 
