--- a/app/assets/stylesheets/city/binakuru/toolbar.css.sass
+++ b/app/assets/stylesheets/city/binakuru/toolbar.css.sass
@@ -25,9 +25,7 @@
           height: 100%
           text-align: center
           a 
-            font-family: $title_prg
-            color: $white
-            font-size: 17px
+            @include toolbarLinks
             display: block
             position: absolute
             text-align: center
