--- a/app/assets/stylesheets/city/binakuru/variables.scss
+++ b/app/assets/stylesheets/city/binakuru/variables.scss
@@ -8,12 +8,11 @@ $bodyBackground:          #f9f9f9;
 
 // typography
 // -------------------------
-$title: 									"LatoLightItalic";
-$title2: 									"LatoItalic";
-$section: 								"LatoLight";
-$link: 										"LatoRegular";
-$text: 										"OpenSans";
-$title_prg:								"LatoRegular";
+$LatoLightItalic: 				"LatoLightItalic";
+$LatoItalic: 									"LatoItalic";
+$LatoLight: 							"LatoLight";
+$OpenSans: 						 		"OpenSans";
+$Lato:							    	"LatoRegular";
 
 // Links
 // -------------------------
