--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -6,7 +6,10 @@
       img
         @include grid-fluid-span(9, $fluidGridColumnWidth, $fluidGridGutterWidth)
         max-height: 360px
-        float: left       
+        float: left
+      iframe 
+        width: 720px
+        height: 360px      
     .carousel-caption
       @include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
       float: left
@@ -28,6 +31,7 @@
     width: 188px
     background-color: $color1
     @include border-radius(94px)
+  
     position: absolute
     z-index: 2
     margin-top: 20px
