--- a/app/assets/stylesheets/city/binakuru/headers.css.sass
+++ b/app/assets/stylesheets/city/binakuru/headers.css.sass
@@ -18,18 +18,22 @@
 					width: 75px
 					margin-right: 20px
 			.user-nav
-				border: 1px solid $grayDark
-				-webkit-box-shadow: inset 2px 2px 2px 2px rgba(50, 50, 50, 0.6)
-				box-shadow: inset 2px 2px 2px 2px rgba(50, 50, 50, 0.6)
-				@include border-radius(15px)
+				
+				
+				
+				
 				height: 30px
 				margin-top: 6px
 				margin-bottom: 3px
 				.avatar-nav
 					img
+						@include border-top-left-radius(15px)
+						@include border-top-right-radius(15px)
+						@include border-bottom-right-radius(0px)
+						@include border-bottom-left-radius(15px)
 						width: 30px
 						height: 30px
-						@include border-radius(15px)
+						
 				a
 					padding: 0px
 				.name
