--- a/app/views/toolbar/_profile.html.erb
+++ b/app/views/toolbar/_profile.html.erb
@@ -2,10 +2,10 @@
   <div class="toolbar_content">
     <ul>
       <li class="">
-        <div class="toolbar_front">
+        <div class="toolbar_front roundedBox">
           <a href=""></a>
         </div>
-        <div class="toolbar_back">
+        <div class="toolbar_back roundedBox">
           <img src="/assets/profile.png" alt="">
         </div>
   <!--       <div class="user">
