--- a/app/assets/stylesheets/city/binakuru/mixins.css.sass
+++ b/app/assets/stylesheets/city/binakuru/mixins.css.sass
@@ -4,7 +4,7 @@
   color: grey
 @mixin section
   font-family: $LatoLight
-  font-size: 20px
+  font-size: 18px
   color: grey
 @mixin title
   font-family: $LatoLightItalic
@@ -26,6 +26,10 @@
   font-family: $Lato
   font-size: 10px
   color: lightgrey
+@mixin writeSpace
+  font-family: $LatoItalic
+  font-size: 14px
+  color: grey
 @mixin info
   font-family: $LatoLight
   font-size: 14px
@@ -120,10 +124,10 @@
 @mixin wallOptions
   font-family: $Lato
   font-size: 12px
-  color: $white
+  color: grey
 @mixin diaryGuideName
   font-family: $LatoItalic
-  font-size: 16px
+  font-size: 18px
   color: grey
 
 //TOOLBAR
@@ -132,7 +136,7 @@
   font-family: $Lato
   font-size: 18px
   color: $white
-@mixin toolbarlinks2
+@mixin toolbarLinks2
   font-family: $LatoItalic
   font-size: 16px
   color: white
