--- a/app/assets/stylesheets/city/binakuru/toolbar.css.sass
+++ b/app/assets/stylesheets/city/binakuru/toolbar.css.sass
@@ -5,17 +5,21 @@
   .toolbar_content
     ul
       margin: 0
-      li:last-child,
-      li:first-child
+      li:last-child
         margin: 0
-      
-
+      li:first-child
+        width: 102px
       li 
         display: inline-block
         height: 102px
         position: relative
         margin-right: 1.35%
         width: 15.2%
+        .roundedBox
+          @include border-top-left-radius(50px)
+          @include border-top-right-radius(50px)
+          @include border-bottom-right-radius(0px)
+          @include border-bottom-left-radius(50px)
         .toolbar_front
           background-color: $color1
           opacity: 0.7
@@ -36,24 +40,30 @@
             li
               display: block !important
               height: 20px !important
-              text-align: left
               margin-left: 18px
               a
+                @include infoUser
                 color: white
                 font-size: 14px
+                text-align: left
         .toolbar_back
           z-index: 0
           position: absolute
           width: 147px
           height: 102px
           img
-            width: 100%
+            @include border-top-left-radius(50px)
+            @include border-top-right-radius(50px)
+            @include border-bottom-right-radius(0px)
+            @include border-bottom-left-radius(50px)
+            width: 102px
             height: 100%
         .toolbar_contacts
           height: 43px
           margin-bottom: 15px
           position: relative
           a
+            @include toolbarLinks
             top: 26%
             text-align: center
             width: 100%
@@ -61,6 +71,7 @@
           height: 43px
           position: relative
           a
+            @include toolbarLinks
             top: 26%
             text-align: center
             width: 100%
@@ -68,16 +79,14 @@
         width: 10%
         margin-right: 2.42%
         a 
-
-
+          @include toolbarLinks2
           width: 88px
           margin: 4px
       li.diaries:first-child
         margin-right: 2.42%
       li.diaries:last-child
         margin: 0
-
       .info_profile
         margin-left: -4px
-        width: 164px
+        width: 196px
 
