--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -31,7 +31,7 @@
     width: 188px
     background-color: $color1
     @include border-radius(94px)
-  
+    @include cityName
     position: absolute
     z-index: 2
     margin-top: 20px
