--- a/app/views/trips/_info.html.erb
+++ b/app/views/trips/_info.html.erb
@@ -4,9 +4,7 @@
 <div id="Carousel-trip" class="Carousel-trip carousel slide">
   <div class="carousel-inner">
     <div class="item active">
-      <iframe class="photoiframe" name="photoiframe" src="/phototrip.html" >
-
-      </iframe>
+      <%= image_tag('panoramica_toledo.jpg') %>
       <div class="container">
         <div class="carousel-caption">
           <h2>Toledo today</h2>
