--- a/app/views/plannings/index.html.erb
+++ b/app/views/plannings/index.html.erb
@@ -1,21 +1,1 @@
-<!--
-<article class="left_home">
-	<div class="info_city">
-		<%#= render :partial => "" %>
-	</div>
-	<div class="interest_points">
-		<%#= render :partial => "" %>
-	</div>
-</article>
-
-
-<article class="right_home">
-	<div class="planification">
-		<%#= render :partial => "" %>
-	</div>
-	<div class="wall">
-
-			<%#= render :partial => "activities/index", :locals => { :activities => current_subject.wall(:home).page(params[:page]), :owner => current_subject } %>
-	</div>
- </article>
--->
+<div>holacarol</div>
