--- a/app/views/routes/_item.html.erb
+++ b/app/views/routes/_item.html.erb
@@ -1,6 +1,6 @@
 <%= div_for(route, :class =>"item-object minimized ui-corner-all") do %>
   <div class="picture">
-    <%= link_to image_tag('toledo_basica.jpg'), route %>
+    <%= link_to thumb_for(route.main_picture, '540x220'), route %>
     <div class="actions">
       <a href="#" class="button-resizable" class="ui-state-default ui-corner-all"></a>
       <button class="btn btn-small" type="button">add</button> 
