--- a/app/views/trips/_interest_points.html.erb
+++ b/app/views/trips/_interest_points.html.erb
@@ -30,19 +30,21 @@
       <%= render :partial => "points/item", :locals => { :place => place } %>
     <% end %>
   </div>
+    <div id="item-guides">
+    <% @trip.guides.each do |guide| %>
+      <%= render :partial => 'guides/item', :locals => { :guide => guide } %>
+    <% end %>
+  </div>
+
+  <div id="item-routes">
+    <% @trip.routes.each do |route| %>
+      <%= render :partial => "routes/item", :locals => { :route => route } %>
+    <% end %>
+  </div>
+
+  <div id="item-points">
+    <% @trip.places.each do |place| %>
+      <%= render :partial => "points/item", :locals => { :place => place } %>
+    <% end %>
+  </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
