--- a/app/views/trips/_interest_points.html.erb
+++ b/app/views/trips/_interest_points.html.erb
@@ -27,7 +27,7 @@
 
   <div id="item-points">
     <% @trip.places.each do |place| %>
-      <%= render :partial => "points/item", :locals => { :place => place } %>
+      <%= render :partial => "places/item", :locals => { :place => place } %>
     <% end %>
   </div>
 </div>
