--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -41,7 +41,7 @@
       margin-top: 70px
       color: $white
 #interest_points
-  @include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
+  width: 69%
   margin-left: 0px
   display: inline-block
   .checkbox-menu
@@ -52,6 +52,7 @@
     display: inline-block
     float: left
     @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+    margin-left: -19px
 
 
     
@@ -63,7 +64,7 @@
       display: inline-block
       ul
         margin: 0px
-    .content_points
+    .content_places
       display: inline-block
       ul
         margin: 0px
@@ -76,7 +77,7 @@
 .item-object
 
   position: relative
-  margin-right: 19px
+  margin-left: 19px
   margin-top: 19px
 
 .minimized
