--- a/app/views/guides/_item.html.erb
+++ b/app/views/guides/_item.html.erb
@@ -4,7 +4,7 @@
     <div class="actions">
       <a href="#" class="button-resizable" class="ui-state-default ui-corner-all"></a>
       
-      <a href="#" id="add" class="btn" rel="popover" data-placement="bottom" >add</a>
+      <a href="#" id="add" class="btn-add" rel="popover" data-placement="right" ></a>
       <div id="popover_add" style="display: none">
         <li>my planning</li>
         <li>my favourites</li>
