--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -52,7 +52,7 @@
     display: inline-block
     float: left
     @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-    margin-left: -19px
+    
 
 
     
@@ -77,8 +77,20 @@
 .item-object
 
   position: relative
-  margin-left: 19px
+  margin-right: 19px
   margin-top: 19px
+.btn-add
+  @include border-radius(15px)
+  background-color: $color1
+  background-image: url("ico/add+.png")
+  width: 30px
+  height: 30px
+  background-repeat: no-repeat
+  background-position: 50%
+.actions
+  .popover
+    @include border-radius(0px)
+
 
 .minimized
   display: inline-block
@@ -100,13 +112,14 @@
         display: block
         width: 100%
         position: absolute 
-        .btn
+        .btn-add
           position: absolute 
-          right: 0
-          top: 0        
+          left: 10px
+          top: 10px        
         .button-resizable
           position: absolute
           top: 0px
+          right: 0
           background-color: $color1
           width: 20px
           height: 20px
@@ -155,9 +168,10 @@
     .li
       margin-top: 5px
 
-  .btn
+  .btn-add
     position: absolute 
-    right: 0
+    left: 10px
+    top: 10px 
   .button-resizable
     position: absolute
     top: 0px
