--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -19,7 +19,7 @@
 //@import "city/base/content"
 //@import "city/base/content_home"
 @import "city/base/wrapper_activities"
-@import "city/base/timeline"
+//@import "city/base/timeline"
 //@import "city/base/wall"
 //@import "city/base/sidebar"
 //@import "city/base/notifications"
@@ -64,7 +64,7 @@
 @import "city/smartCity/frontpage"
 @import "city/smartCity/places"
 //@import "city/smartCity/devise"
-@import "city/smartCity/comment"
+//@import "city/smartCity/comment"
 
 
 //binakuru
@@ -75,8 +75,10 @@
 @import "city/binakuru/toolbar"
 @import "city/binakuru/fonts"
 @import "city/binakuru/headers"
-
+@import "city/binakuru/timeline"
 @import "city/binakuru/profile"
+@import "city/binakuru/items"
+@import "city/binakuru/comments"
 
 
 
