--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -25,7 +25,6 @@
         color: $gray
         font-size: 16px
         display: inline-block
-
   .title-trip
     height: 188px
     width: 188px
@@ -41,21 +40,17 @@
       margin-top: 70px
       color: $white
 #interest_points
-  width: 69%
+  width: 68.12%
   margin-left: 0px
   display: inline-block
+  float: left
   .checkbox-menu
     label
       display: inline-block
-
   .content-checkbox
     display: inline-block
     float: left
     @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-    
-
-
-    
     .content_guides
       display: inline-block
       ul
@@ -69,130 +64,11 @@
       ul
         margin: 0px
 
-
-
-.popover.right .arrow:after
-
-
-.item-object
-
-  position: relative
-  margin-right: 19px
-  margin-top: 19px
-.btn-add
-  @include border-radius(15px)
-  background-color: $color1
-  background-image: url("ico/add+.png")
-  width: 30px
-  height: 30px
-  background-repeat: no-repeat
-  background-position: 50%
-.actions
-  .popover
-    @include border-radius(0px)
-    width: 146px
-    background-color: $color1
-    color: $white
-
-    .popover-inner
-      h3
-        display: none
-
-.minimized
+#comments-element
+  width: 31.88%
   display: inline-block
   float: left
-  width: 146px
-  height: 146px
-  position: relative
-  .picture
-    width: 146px
-    height: 146px
-    img
-      height: 146px
-      position: absolute
-      @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-      .actions
-        display: none
-    &:hover
-      .actions
-        display: block
-        width: 100%
-        position: absolute 
-        .btn-add
-          position: absolute 
-          left: 10px
-          top: 10px        
-        .button-resizable
-          position: absolute
-          top: 0px
-          right: 0
-          background-color: $color1
-          width: 20px
-          height: 20px
-
-  a.title
-    background: none repeat scroll 0 0 rgba(192, 115, 19, 0.85)
-    height: 26px
-    width: 100%
+  h4
     text-align: center
-    position: absolute
-    bottom: 0
-    color: $white 
-    font-size: 16px
-    text-decoration: none
-    right: 0
-    .li
-      margin-top: 5px
-  .info-show
-    display: none
-
-
-.expanded
-  display: inline-block
-  float: left
-  width: 310px
-  height: 310px
-  position: relative
-  .picture
-    width: 310px
-    height: 146px
-    img
-      height: 310px
-      position: absolute
-      @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-  a.title
-    background: none repeat scroll 0 0 rgba(192, 115, 19, 0.85)
-    height: 26px
-    width: 100%
-    text-align: center
-    position: absolute
-    bottom: 46%
-    color: $white 
-    font-size: 16px
-    text-decoration: none
-    right: 0
-    .li
-      margin-top: 5px
-
-  .btn-add
-    position: absolute 
-    left: 10px
-    top: 10px 
-  .button-resizable
-    position: absolute
-    top: 0px
-    background-color: $red
-    width: 20px
-    height: 20px
-
-  .info-show
-    display: block
-    bottom: 0px
-    background: none repeat scroll 0 0 rgba(192, 115, 19, 0.85)
-    position: absolute
-    height: 120px
-    color: $white
-    padding: 10px
-
-
-
+    margin-top: 4px
+    margin-bottom: 4px
