--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -13,19 +13,12 @@
 	<div id="interest_points">
 		<%= render :partial => "trips/interest_points" %>
 	</div>
-
-
-
-
-
-<!--
-	<h2><%= link_to t('comments') %></h2>
-  <div id="comments" class="comments">
-  	<div class="new-coments-box">
-    	<%= render :partial => 'comments/new', :locals => { :activity => Trip.first.post_activity } %>
-  	</div>
+  
+  <div id="comments-element" class="comments">
+    <h4><%= link_to t('comments') %></h4>
+    <div class="new-coments-box">
+      <%= render :partial => 'comments/new', :locals => { :activity => Trip.first.post_activity } %>
+    </div>
     <%= render :partial => 'activities/comments', :locals => { :activity => Trip.first.post_activity } %>
   </div>
-  
-</div>
--->
+
